--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.3",
-    "@angular/cdk": "7.1.1",
-    "@angular/common": "7.1.3",
-    "@angular/compiler": "7.1.3",
-    "@angular/core": "7.1.3",
-    "@angular/flex-layout": "7.0.0-beta.19",
-    "@angular/forms": "7.1.3",
-    "@angular/material": "7.1.1",
-    "@angular/platform-browser": "7.1.3",
-    "@angular/platform-browser-dynamic": "7.1.3",
-    "@angular/platform-server": "7.1.3",
-    "@angular/router": "7.1.3",
-    "@angular/upgrade": "7.1.3",
-    "@clr/angular": "^1.0.1",
-    "@clr/icons": "1.0.1",
-    "@clr/ui": "1.0.1",
-    "@covalent/core": "2.0.0-rc.1",
+    "@angular/animations": "7.1.4",
+    "@angular/cdk": "7.2.0",
+    "@angular/common": "7.1.4",
+    "@angular/compiler": "7.1.4",
+    "@angular/core": "7.1.4",
+    "@angular/flex-layout": "7.0.0-beta.22",
+    "@angular/forms": "7.1.4",
+    "@angular/material": "7.2.0",
+    "@angular/platform-browser": "7.1.4",
+    "@angular/platform-browser-dynamic": "7.1.4",
+    "@angular/platform-server": "7.1.4",
+    "@angular/router": "7.1.4",
+    "@angular/upgrade": "7.1.4",
+    "@clr/angular": "1.0.3-patch",
+    "@clr/icons": "1.0.3-patch",
+    "@clr/ui": "1.0.3-patch",
+    "@covalent/core": "2.0.0",
     "@fortawesome/fontawesome": "1.1.8",
     "@fortawesome/fontawesome-free-brands": "5.0.13",
     "@fortawesome/fontawesome-free-regular": "5.0.13",
@@ -46,7 +46,7 @@
     "@fortawesome/fontawesome-free-webfonts": "1.0.9",
     "@webcomponents/custom-elements": "1.2.1",
     "bootstrap": "4.1.3",
-    "core-js": "2.6.0",
+    "core-js": "2.6.1",
     "es6-shim": "0.35.4",
     "flag-icon-css": "3.2.1",
     "jquery": "3.3.1",
@@ -54,27 +54,26 @@
     "moment": "2.23.0",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "3.1.3",
-    "ngx-logger": "3.3.7",
-    "npm": "^6.5.0",
-    "primeng": "7.0.1",
+    "ngx-logger": "3.3.8",
+    "primeng": "7.0.3",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.11.3",
-    "@angular-devkit/core": "7.1.3",
-    "@angular/cli": "7.1.3",
-    "@angular/compiler-cli": "7.1.3",
-    "@angular/language-service": "7.1.3",
+    "@angular-devkit/build-angular": "0.11.4",
+    "@angular-devkit/core": "7.1.4",
+    "@angular/cli": "7.1.4",
+    "@angular/compiler-cli": "7.1.4",
+    "@angular/language-service": "7.1.4",
     "@compodoc/compodoc": "1.1.7",
-    "@types/jasmine": "3.3.1",
-    "@types/node": "10.12.15",
+    "@types/jasmine": "3.3.4",
+    "@types/node": "10.12.18",
     "codelyzer": "4.5.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
-    "karma": "3.1.3",
+    "karma": "3.1.4",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "2.0.4",
@@ -92,7 +91,7 @@
     "stylelint-config-prettier": "4.0.0",
     "stylelint-config-standard": "18.2.0",
     "ts-node": "7.0.1",
-    "tslint": "5.11.0",
+    "tslint": "5.12.0",
     "tslint-config-prettier": "1.17.0",
     "typescript": "3.1.6",
     "webpack-bundle-analyzer": "3.0.3"
