--- a/package.json
+++ b/package.json
@@ -3,41 +3,43 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "ng build --prod --stats-json",
+    "build": "ng --progress=false build --stats-json",
     "bundle-report": "webpack-bundle-analyzer dist/stats.json",
     "doc:build": "compodoc -p src/tsconfig.app.json --theme 'material'",
     "doc:serve": "compodoc -s",
     "doc:buildandserve": "compodoc -p src/tsconfig.app.json --theme 'material' -s",
-    "e2e": "ng e2e",
-    "format:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
-    "format:fix": "prettier --config ./.prettierrc --write \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss,.html}\"",
-    "lint": "tslint --fix --project src/tsconfig.app.json",
-    "lint:check": "tslint-config-prettier-check ./tslint.json",
+    "e2e": "ng --progress=false e2e",
+    "format:check": "prettier --config ./.prettierrc --list-different \"src/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+    "format:fix": "prettier --config ./.prettierrc --write \"src/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+    "karma": "karma start --single-run",
     "modernizr": "modernizr -uc modernizr-config.json -d modernizr-custom.min.js",
     "ng": "ng",
     "start": "ng serve --open",
-    "stylelint": "stylelint --fix '**/*.scss' --syntax scss",
-    "test": "ng test",
-    "test:all": "npm run lint && npm run stylelint && npm run test'"
+    "stylelint": "stylelint --fix '**/*.scss'",
+    "stylelint:check": "stylelint-config-prettier-check",
+    "test": "ng test --watch=false --browsers --progress=false --source-map=false FirefoxHeadless",
+    "tslint": "tslint --fix --project src/tsconfig.app.json",
+    "tslint:check": "tslint-config-prettier-check ./tslint.json",
+    "testAll": "npm run tslint && npm run stylelint && npm run test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.4",
-    "@angular/cdk": "7.2.0",
-    "@angular/common": "7.1.4",
-    "@angular/compiler": "7.1.4",
-    "@angular/core": "7.1.4",
-    "@angular/flex-layout": "7.0.0-beta.22",
-    "@angular/forms": "7.1.4",
-    "@angular/material": "7.2.0",
-    "@angular/platform-browser": "7.1.4",
-    "@angular/platform-browser-dynamic": "7.1.4",
-    "@angular/platform-server": "7.1.4",
-    "@angular/router": "7.1.4",
-    "@angular/upgrade": "7.1.4",
-    "@clr/angular": "1.0.3-patch",
-    "@clr/icons": "1.0.3-patch",
-    "@clr/ui": "1.0.3-patch",
+    "@angular/animations": "7.2.1",
+    "@angular/cdk": "7.2.1",
+    "@angular/common": "7.2.1",
+    "@angular/compiler": "7.2.1",
+    "@angular/core": "7.2.1",
+    "@angular/flex-layout": "7.0.0-beta.23",
+    "@angular/forms": "7.2.1",
+    "@angular/material": "7.2.1",
+    "@angular/platform-browser": "7.2.1",
+    "@angular/platform-browser-dynamic": "7.2.1",
+    "@angular/platform-server": "7.2.1",
+    "@angular/router": "7.2.1",
+    "@angular/upgrade": "7.2.1",
+    "@clr/angular": "1.0.4",
+    "@clr/icons": "1.0.4",
+    "@clr/ui": "1.0.4",
     "@covalent/core": "2.0.0",
     "@fortawesome/fontawesome": "1.1.8",
     "@fortawesome/fontawesome-free-brands": "5.0.13",
@@ -45,29 +47,29 @@
     "@fortawesome/fontawesome-free-solid": "5.0.13",
     "@fortawesome/fontawesome-free-webfonts": "1.0.9",
     "@webcomponents/custom-elements": "1.2.1",
-    "bootstrap": "4.1.3",
-    "core-js": "2.6.1",
+    "bootstrap": "4.2.1",
+    "core-js": "2.6.2",
     "es6-shim": "0.35.4",
     "flag-icon-css": "3.2.1",
     "jquery": "3.3.1",
     "lodash": "4.17.11",
     "moment": "2.23.0",
-    "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "3.1.3",
-    "ngx-logger": "3.3.8",
-    "primeng": "7.0.3",
-    "reflect-metadata": "0.1.12",
+    "mutationobserver-shim": "0.3.3",
+    "ngx-bootstrap": "3.1.4",
+    "ngx-logger": "3.3.9",
+    "primeng": "7.0.4",
+    "reflect-metadata": "0.1.13",
     "rxjs": "6.3.3",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.28"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.11.4",
-    "@angular-devkit/core": "7.1.4",
-    "@angular/cli": "7.1.4",
-    "@angular/compiler-cli": "7.1.4",
-    "@angular/language-service": "7.1.4",
+    "@angular-devkit/build-angular": "0.12.2",
+    "@angular-devkit/core": "7.2.2",
+    "@angular/cli": "7.2.2",
+    "@angular/compiler-cli": "7.2.1",
+    "@angular/language-service": "7.2.1",
     "@compodoc/compodoc": "1.1.7",
-    "@types/jasmine": "3.3.4",
+    "@types/jasmine": "3.3.5",
     "@types/node": "10.12.18",
     "codelyzer": "4.5.0",
     "jasmine-core": "3.3.0",
@@ -86,14 +88,14 @@
     "modernizr": "3.6.0",
     "node-sass": "4.11.0",
     "prettier": "1.15.3",
-    "protractor": "5.4.1",
-    "stylelint": "9.9.0",
+    "protractor": "5.4.2",
+    "stylelint": "9.10.0",
     "stylelint-config-prettier": "4.0.0",
     "stylelint-config-standard": "18.2.0",
     "ts-node": "7.0.1",
-    "tslint": "5.12.0",
+    "tslint": "5.12.1",
     "tslint-config-prettier": "1.17.0",
-    "typescript": "3.1.6",
+    "typescript": "3.2.2",
     "webpack-bundle-analyzer": "3.0.3"
   }
 }
