--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -2,12 +2,11 @@
     "extends": "../tsconfig.json",
     "compilerOptions": {
         "outDir": "../out-tsc/spec",
+        "baseUrl": "./",
         "module": "commonjs",
         "target": "es5",
-        "baseUrl": "",
         "types": ["jasmine", "node"]
     },
-    "files": ["test.ts"  "polyfills.ts"
-  ,],
+    "files": ["test.ts", "polyfills.ts"],
     "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
