--- a/package.json
+++ b/package.json
@@ -1,101 +1,102 @@
 {
-  "name": "starter",
-  "version": "1.0.0",
-  "license": "MIT",
-  "scripts": {
-    "build": "ng --progress=false build --stats-json",
-    "bundle-report": "webpack-bundle-analyzer dist/stats.json",
-    "doc:build": "compodoc -p src/tsconfig.app.json --theme 'material'",
-    "doc:serve": "compodoc -s",
-    "doc:buildandserve": "compodoc -p src/tsconfig.app.json --theme 'material' -s",
-    "e2e": "ng --progress=false e2e",
-    "format:check": "prettier --config ./.prettierrc --list-different \"src/**/*{.ts,.js,.json,.css,.scss,.html}\"",
-    "format:fix": "prettier --config ./.prettierrc --write \"src/**/*{.ts,.js,.json,.css,.scss,.html}\"",
-    "karma": "karma start --single-run",
-    "modernizr": "modernizr -uc modernizr-config.json -d modernizr-custom.min.js",
-    "ng": "ng",
-    "start": "ng serve --open",
-    "stylelint": "stylelint --fix '**/*.scss'",
-    "stylelint:check": "stylelint-config-prettier-check",
-    "test": "ng test --watch=false --browsers --progress=false --source-map=false FirefoxHeadless",
-    "tslint": "tslint --fix --project src/tsconfig.app.json",
-    "tslint:check": "tslint-config-prettier-check ./tslint.json",
-    "testAll": "npm run tslint && npm run stylelint && npm run test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "7.2.1",
-    "@angular/cdk": "7.2.1",
-    "@angular/common": "7.2.1",
-    "@angular/compiler": "7.2.1",
-    "@angular/core": "7.2.1",
-    "@angular/flex-layout": "7.0.0-beta.23",
-    "@angular/forms": "7.2.1",
-    "@angular/material": "7.2.1",
-    "@angular/platform-browser": "7.2.1",
-    "@angular/platform-browser-dynamic": "7.2.1",
-    "@angular/platform-server": "7.2.1",
-    "@angular/router": "7.2.1",
-    "@angular/upgrade": "7.2.1",
-    "@clr/angular": "1.0.4",
-    "@clr/icons": "1.0.4",
-    "@clr/ui": "1.0.4",
-    "@covalent/core": "2.0.0",
-    "@fortawesome/fontawesome": "1.1.8",
-    "@fortawesome/fontawesome-free-brands": "5.0.13",
-    "@fortawesome/fontawesome-free-regular": "5.0.13",
-    "@fortawesome/fontawesome-free-solid": "5.0.13",
-    "@fortawesome/fontawesome-free-webfonts": "1.0.9",
-    "@webcomponents/custom-elements": "1.2.1",
-    "bootstrap": "4.2.1",
-    "core-js": "2.6.2",
-    "es6-shim": "0.35.4",
-    "flag-icon-css": "3.2.1",
-    "jquery": "3.3.1",
-    "lodash": "4.17.11",
-    "moment": "2.23.0",
-    "mutationobserver-shim": "0.3.3",
-    "ngx-bootstrap": "3.1.4",
-    "ngx-logger": "3.3.9",
-    "primeng": "7.0.4",
-    "reflect-metadata": "0.1.13",
-    "rxjs": "6.3.3",
-    "zone.js": "0.8.28"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "0.12.2",
-    "@angular-devkit/core": "7.2.2",
-    "@angular/cli": "7.2.2",
-    "@angular/compiler-cli": "7.2.1",
-    "@angular/language-service": "7.2.1",
-    "@compodoc/compodoc": "1.1.7",
-    "@types/jasmine": "3.3.5",
-    "@types/node": "10.12.18",
-    "codelyzer": "4.5.0",
-    "jasmine-core": "3.3.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "jshint-stylish": "2.2.1",
-    "karma": "3.1.4",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "2.0.4",
-    "karma-firefox-launcher": "1.1.0",
-    "karma-ie-launcher": "1.0.0",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.0",
-    "karma-phantomjs-launcher": "1.0.4",
-    "karma-remap-istanbul": "0.6.0",
-    "modernizr": "3.6.0",
-    "node-sass": "4.11.0",
-    "prettier": "1.15.3",
-    "protractor": "5.4.2",
-    "stylelint": "9.10.0",
-    "stylelint-config-prettier": "4.0.0",
-    "stylelint-config-standard": "18.2.0",
-    "ts-node": "7.0.1",
-    "tslint": "5.12.1",
-    "tslint-config-prettier": "1.17.0",
-    "typescript": "3.2.2",
-    "webpack-bundle-analyzer": "3.0.3"
-  }
+    "name": "starter",
+    "version": "1.0.0",
+    "license": "MIT",
+    "scripts": {
+        "build": "ng --progress=false build --stats-json",
+        "bundle-report": "webpack-bundle-analyzer dist/stats.json",
+        "doc:build": "compodoc -p src/tsconfig.app.json --theme 'material'",
+        "doc:serve": "compodoc -s",
+        "doc:buildandserve": "compodoc -p src/tsconfig.app.json --theme 'material' -s",
+        "e2e": "ng --progress=false e2e",
+        "format:check": "prettier --config ./.prettierrc --list-different \"src/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+        "format:fix": "prettier --config ./.prettierrc --write \"src/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+        "karma": "karma start --single-run",
+        "modernizr": "modernizr -uc modernizr-config.json -d modernizr-custom.min.js",
+        "ng": "ng",
+        "start": "ng serve --open",
+        "stylelint": "stylelint --fix '**/*.scss'",
+        "stylelint:check": "stylelint-config-prettier-check",
+        "test": "ng test --watch=false --browsers --progress=false --source-map=false FirefoxHeadless",
+        "tslint": "tslint --fix --project src/tsconfig.app.json",
+        "tslint:check": "tslint-config-prettier-check ./tslint.json",
+        "testAll": "npm run tslint && npm run stylelint && npm run test"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "7.2.2",
+        "@angular/cdk": "7.2.2",
+        "@angular/common": "7.2.2",
+        "@angular/compiler": "7.2.2",
+        "@angular/core": "7.2.2",
+        "@angular/flex-layout": "7.0.0-beta.23",
+        "@angular/forms": "7.2.2",
+        "@angular/material": "7.2.2",
+        "@angular/platform-browser": "7.2.2",
+        "@angular/platform-browser-dynamic": "7.2.2",
+        "@angular/platform-server": "7.2.2",
+        "@angular/router": "7.2.2",
+        "@angular/upgrade": "7.2.2",
+        "@clr/angular": "1.0.4",
+        "@clr/icons": "1.0.4",
+        "@clr/ui": "1.0.4",
+        "@covalent/core": "2.0.1",
+        "@fortawesome/fontawesome": "1.1.8",
+        "@fortawesome/fontawesome-free-brands": "5.0.13",
+        "@fortawesome/fontawesome-free-regular": "5.0.13",
+        "@fortawesome/fontawesome-free-solid": "5.0.13",
+        "@fortawesome/fontawesome-free-webfonts": "1.0.9",
+        "@webcomponents/custom-elements": "1.2.1",
+        "bootstrap": "4.2.1",
+        "core-js": "2.6.3",
+        "es6-shim": "0.35.4",
+        "flag-icon-css": "3.2.1",
+        "hammerjs": "^2.0.8",
+        "jquery": "3.3.1",
+        "lodash": "4.17.11",
+        "moment": "2.24.0",
+        "mutationobserver-shim": "0.3.3",
+        "ngx-bootstrap": "3.2.0",
+        "ngx-logger": "3.3.11",
+        "primeng": "7.0.5",
+        "reflect-metadata": "0.1.13",
+        "rxjs": "6.3.3",
+        "zone.js": "0.8.29"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "0.12.3",
+        "@angular-devkit/core": "7.2.3",
+        "@angular/cli": "7.2.3",
+        "@angular/compiler-cli": "7.2.2",
+        "@angular/language-service": "7.2.2",
+        "@compodoc/compodoc": "1.1.7",
+        "@types/jasmine": "3.3.8",
+        "@types/node": "10.12.18",
+        "codelyzer": "4.5.0",
+        "jasmine-core": "3.3.0",
+        "jasmine-spec-reporter": "4.2.1",
+        "jshint-stylish": "2.2.1",
+        "karma": "4.0.0",
+        "karma-chrome-launcher": "2.2.0",
+        "karma-cli": "2.0.0",
+        "karma-coverage-istanbul-reporter": "2.0.4",
+        "karma-firefox-launcher": "1.1.0",
+        "karma-ie-launcher": "1.0.0",
+        "karma-jasmine": "2.0.1",
+        "karma-jasmine-html-reporter": "1.4.0",
+        "karma-phantomjs-launcher": "1.0.4",
+        "karma-remap-istanbul": "0.6.0",
+        "modernizr": "3.6.0",
+        "node-sass": "4.11.0",
+        "prettier": "1.16.1",
+        "protractor": "5.4.2",
+        "stylelint": "9.10.1",
+        "stylelint-config-prettier": "4.0.0",
+        "stylelint-config-standard": "18.2.0",
+        "ts-node": "8.0.2",
+        "tslint": "5.12.1",
+        "tslint-config-prettier": "1.17.0",
+        "typescript": "3.2.4",
+        "webpack-bundle-analyzer": "3.0.3"
+    }
 }
