--- a/package.json
+++ b/package.json
@@ -46,12 +46,20 @@
         "@fortawesome/fontawesome-free-regular": "5.0.13",
         "@fortawesome/fontawesome-free-solid": "5.0.13",
         "@fortawesome/fontawesome-free-webfonts": "1.0.9",
+        "@ng-bootstrap/ng-bootstrap": "4.0.2",
         "@webcomponents/custom-elements": "1.2.1",
+        "angular-calendar": "0.26.6",
+        "angular-draggable-droppable": "4.0.2",
+        "angular-resizable-element": "3.2.2",
+        "angularx-flatpickr": "6.1.0",
         "bootstrap": "4.2.1",
-        "core-js": "2.6.3",
+        "calendar-utils": "0.2.3",
+        "core-js": "2.6.4",
+        "date-fns": "1.30.1",
         "es6-shim": "0.35.4",
         "flag-icon-css": "3.2.1",
-        "hammerjs": "^2.0.8",
+        "flatpickr": "4.5.2",
+        "hammerjs": "2.0.8",
         "jquery": "3.3.1",
         "lodash": "4.17.11",
         "moment": "2.24.0",
@@ -60,18 +68,19 @@
         "ngx-logger": "3.3.11",
         "primeng": "7.0.5",
         "reflect-metadata": "0.1.13",
+        "rrule": "^2.6.0",
         "rxjs": "6.4.0",
         "zone.js": "0.8.29"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.13.0",
-        "@angular-devkit/core": "7.3.0",
-        "@angular/cli": "7.3.0",
+        "@angular-devkit/build-angular": "0.13.1",
+        "@angular-devkit/core": "7.3.1",
+        "@angular/cli": "7.3.1",
         "@angular/compiler-cli": "7.2.4",
         "@angular/language-service": "7.2.4",
-        "@compodoc/compodoc": "1.1.7",
+        "@compodoc/compodoc": "1.1.8",
         "@types/jasmine": "3.3.8",
-        "@types/node": "10.12.21",
+        "@types/node": "10.12.24",
         "codelyzer": "4.5.0",
         "jasmine-core": "3.3.0",
         "jasmine-spec-reporter": "4.2.1",
