--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,22 +1,23 @@
 {
-  "extends": ["stylelint-config-standard"],
-  "rules": {
-    "at-rule-no-unknown": [ true, {
-      "ignoreAtRules": [
-        "include", "mixin"
-      ]
-    }],
-    "color-hex-case": "lower",
-    "declaration-block-no-duplicate-properties": [ true, {
-      "ignore": [
-        "consecutive-duplicates-with-different-values"
-      ]
-    }],
-    "selector-type-no-unknown": [ true, {
-      "ignoreTypes": [
-        "/^sg-/",
-        "/^ng-/"
-      ]
-    }]
-  }
+    "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
+    "rules": {
+        "at-rule-no-unknown": [
+            true,
+            {
+                "ignoreAtRules": ["include", "mixin"]
+            }
+        ],
+        "declaration-block-no-duplicate-properties": [
+            true,
+            {
+                "ignore": ["consecutive-duplicates-with-different-values"]
+            }
+        ],
+        "selector-type-no-unknown": [
+            true,
+            {
+                "ignoreTypes": ["/^sg-/", "/^ng-/", "/^mat-/"]
+            }
+        ]
+    }
 }
