--- a/package.json
+++ b/package.json
@@ -24,63 +24,65 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "7.2.4",
-        "@angular/cdk": "7.3.1",
-        "@angular/common": "7.2.4",
-        "@angular/compiler": "7.2.4",
-        "@angular/core": "7.2.4",
+        "@angular/animations": "7.2.6",
+        "@angular/cdk": "7.3.3",
+        "@angular/common": "7.2.6",
+        "@angular/compiler": "7.2.6",
+        "@angular/core": "7.2.6",
         "@angular/flex-layout": "7.0.0-beta.23",
-        "@angular/forms": "7.2.4",
-        "@angular/material": "7.3.1",
-        "@angular/platform-browser": "7.2.4",
-        "@angular/platform-browser-dynamic": "7.2.4",
-        "@angular/platform-server": "7.2.4",
-        "@angular/router": "7.2.4",
-        "@angular/upgrade": "7.2.4",
-        "@clr/angular": "1.0.5",
-        "@clr/icons": "1.0.5",
-        "@clr/ui": "1.0.5",
+        "@angular/forms": "7.2.6",
+        "@angular/material": "7.3.3",
+        "@angular/platform-browser": "7.2.6",
+        "@angular/platform-browser-dynamic": "7.2.6",
+        "@angular/platform-server": "7.2.6",
+        "@angular/router": "7.2.6",
+        "@angular/upgrade": "7.2.6",
+        "@clr/angular": "1.1.0",
+        "@clr/icons": "1.1.0",
+        "@clr/ui": "1.1.0",
         "@covalent/core": "2.0.1",
         "@fortawesome/fontawesome": "1.1.8",
         "@fortawesome/fontawesome-free-brands": "5.0.13",
         "@fortawesome/fontawesome-free-regular": "5.0.13",
         "@fortawesome/fontawesome-free-solid": "5.0.13",
         "@fortawesome/fontawesome-free-webfonts": "1.0.9",
-        "@ng-bootstrap/ng-bootstrap": "4.0.2",
+        "@ng-bootstrap/ng-bootstrap": "4.0.4",
+        "@ng-select/ng-select": "2.15.3",
         "@webcomponents/custom-elements": "1.2.1",
         "angular-calendar": "0.26.6",
-        "angular-draggable-droppable": "4.0.2",
+        "angular-draggable-droppable": "4.1.0",
         "angular-resizable-element": "3.2.3",
         "angularx-flatpickr": "6.1.0",
-        "bootstrap": "4.3.0",
+        "bootstrap": "4.3.1",
         "calendar-utils": "0.2.3",
-        "core-js": "2.6.4",
+        "core-js": "2.6.5",
         "date-fns": "1.30.1",
         "es6-shim": "0.35.4",
-        "flag-icon-css": "3.2.1",
-        "flatpickr": "4.5.2",
+        "flag-icon-css": "3.3.0",
+        "flatpickr": "4.5.4",
         "hammerjs": "2.0.8",
         "jquery": "3.3.1",
         "lodash": "4.17.11",
         "moment": "2.24.0",
         "mutationobserver-shim": "0.3.3",
+        "ng-busy": "7.0.0",
         "ngx-bootstrap": "3.2.0",
         "ngx-logger": "3.3.11",
         "primeng": "7.0.5",
         "reflect-metadata": "0.1.13",
-        "rrule": "^2.6.0",
+        "rrule": "2.6.0",
         "rxjs": "6.4.0",
         "zone.js": "0.8.29"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.13.1",
-        "@angular-devkit/core": "7.3.1",
-        "@angular/cli": "7.3.1",
-        "@angular/compiler-cli": "7.2.4",
-        "@angular/language-service": "7.2.4",
+        "@angular-devkit/build-angular": "0.13.3",
+        "@angular-devkit/core": "7.3.3",
+        "@angular/cli": "7.3.3",
+        "@angular/compiler-cli": "7.2.6",
+        "@angular/language-service": "7.2.6",
         "@compodoc/compodoc": "1.1.8",
-        "@types/jasmine": "3.3.8",
-        "@types/node": "10.12.24",
+        "@types/jasmine": "3.3.9",
+        "@types/node": "11.9.5",
         "codelyzer": "4.5.0",
         "jasmine-core": "3.3.0",
         "jasmine-spec-reporter": "4.2.1",
@@ -88,7 +90,7 @@
         "karma": "4.0.0",
         "karma-chrome-launcher": "2.2.0",
         "karma-cli": "2.0.0",
-        "karma-coverage-istanbul-reporter": "2.0.4",
+        "karma-coverage-istanbul-reporter": "2.0.5",
         "karma-firefox-launcher": "1.1.0",
         "karma-ie-launcher": "1.0.0",
         "karma-jasmine": "2.0.1",
@@ -100,12 +102,12 @@
         "prettier": "1.16.4",
         "protractor": "5.4.2",
         "stylelint": "9.10.1",
-        "stylelint-config-prettier": "4.0.0",
+        "stylelint-config-prettier": "5.0.0",
         "stylelint-config-standard": "18.2.0",
         "ts-node": "8.0.2",
-        "tslint": "5.12.1",
+        "tslint": "5.13.0",
         "tslint-config-prettier": "1.18.0",
         "typescript": "3.2.4",
-        "webpack-bundle-analyzer": "3.0.3"
+        "webpack-bundle-analyzer": "3.0.4"
     }
 }
