--- a/package.json
+++ b/package.json
@@ -24,43 +24,43 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "7.2.7",
-        "@angular/cdk": "7.3.3",
-        "@angular/common": "7.2.7",
-        "@angular/compiler": "7.2.7",
-        "@angular/core": "7.2.7",
-        "@angular/flex-layout": "7.0.0-beta.23",
-        "@angular/forms": "7.2.7",
-        "@angular/material": "7.3.3",
-        "@angular/platform-browser": "7.2.7",
-        "@angular/platform-browser-dynamic": "7.2.7",
-        "@angular/platform-server": "7.2.7",
-        "@angular/router": "7.2.7",
-        "@angular/upgrade": "7.2.7",
-        "@clr/angular": "1.1.0",
-        "@clr/icons": "1.1.0",
-        "@clr/ui": "1.1.0",
+        "@angular/animations": "7.2.10",
+        "@angular/cdk": "7.3.5",
+        "@angular/common": "7.2.10",
+        "@angular/compiler": "7.2.10",
+        "@angular/core": "7.2.10",
+        "@angular/flex-layout": "7.0.0-beta.24",
+        "@angular/forms": "7.2.10",
+        "@angular/material": "7.3.5",
+        "@angular/platform-browser": "7.2.10",
+        "@angular/platform-browser-dynamic": "7.2.10",
+        "@angular/platform-server": "7.2.10",
+        "@angular/router": "7.2.10",
+        "@angular/upgrade": "7.2.10",
+        "@clr/angular": "1.1.2",
+        "@clr/icons": "1.1.2",
+        "@clr/ui": "1.1.2",
         "@covalent/core": "2.0.1",
         "@fortawesome/fontawesome": "1.1.8",
         "@fortawesome/fontawesome-free-brands": "5.0.13",
         "@fortawesome/fontawesome-free-regular": "5.0.13",
         "@fortawesome/fontawesome-free-solid": "5.0.13",
         "@fortawesome/fontawesome-free-webfonts": "1.0.9",
-        "@ng-bootstrap/ng-bootstrap": "4.0.4",
-        "@ng-select/ng-select": "2.16.0",
+        "@ng-bootstrap/ng-bootstrap": "4.1.0",
+        "@ng-select/ng-select": "2.16.2",
         "@ngx-translate/core": "11.0.1",
         "@webcomponents/custom-elements": "1.2.1",
-        "angular-calendar": "0.26.6",
-        "angular-draggable-droppable": "4.1.0",
+        "angular-calendar": "0.27.0",
+        "angular-draggable-droppable": "4.2.0",
         "angular-resizable-element": "3.2.4",
         "angularx-flatpickr": "6.1.0",
         "bootstrap": "4.3.1",
-        "calendar-utils": "0.2.3",
-        "core-js": "2.6.5",
+        "calendar-utils": "0.3.0",
+        "core-js": "3.0.0",
         "date-fns": "1.30.1",
-        "es6-shim": "0.35.4",
+        "es6-shim": "0.35.5",
         "flag-icon-css": "3.3.0",
-        "flatpickr": "4.5.4",
+        "flatpickr": "4.5.7",
         "hammerjs": "2.0.8",
         "jquery": "3.3.1",
         "lodash": "4.17.11",
@@ -68,23 +68,23 @@
         "mutationobserver-shim": "0.3.3",
         "ng-busy": "7.0.0",
         "ngx-bootstrap": "3.2.0",
-        "ngx-logger": "3.3.11",
-        "primeng": "7.0.5",
+        "ngx-logger": "3.3.12",
+        "primeng": "7.1.0",
         "reflect-metadata": "0.1.13",
         "rrule": "2.6.0",
         "rxjs": "6.4.0",
-        "zone.js": "0.8.29"
+        "zone.js": "0.9.0"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.13.4",
-        "@angular-devkit/core": "7.3.4",
-        "@angular/cli": "7.3.4",
-        "@angular/compiler-cli": "7.2.7",
-        "@angular/language-service": "7.2.7",
+        "@angular-devkit/build-angular": "0.13.6",
+        "@angular-devkit/core": "7.3.6",
+        "@angular/cli": "7.3.6",
+        "@angular/compiler-cli": "7.2.10",
+        "@angular/language-service": "7.2.10",
         "@compodoc/compodoc": "1.1.9",
-        "@types/jasmine": "3.3.9",
-        "@types/node": "11.10.0",
-        "codelyzer": "4.5.0",
+        "@types/jasmine": "3.3.12",
+        "@types/node": "11.11.6",
+        "codelyzer": "5.0.0-beta.2",
         "jasmine-core": "3.3.0",
         "jasmine-spec-reporter": "4.2.1",
         "jshint-stylish": "2.2.1",
@@ -98,17 +98,17 @@
         "karma-jasmine-html-reporter": "1.4.0",
         "karma-phantomjs-launcher": "1.0.4",
         "karma-remap-istanbul": "0.6.0",
-        "modernizr": "3.7.0",
+        "modernizr": "3.7.1",
         "node-sass": "4.11.0",
         "prettier": "1.16.4",
-        "protractor": "5.4.2",
+        "protractor": "6.0.0",
         "stylelint": "9.10.1",
         "stylelint-config-prettier": "5.0.0",
         "stylelint-config-standard": "18.2.0",
-        "ts-node": "8.0.2",
-        "tslint": "5.13.1",
+        "ts-node": "8.0.3",
+        "tslint": "5.14.0",
         "tslint-config-prettier": "1.18.0",
         "typescript": "3.2.4",
-        "webpack-bundle-analyzer": "3.0.4"
+        "webpack-bundle-analyzer": "3.1.0"
     }
 }
