--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "7.2.10",
-        "@angular/cdk": "7.3.5",
-        "@angular/common": "7.2.10",
-        "@angular/compiler": "7.2.10",
-        "@angular/core": "7.2.10",
+        "@angular/animations": "7.2.12",
+        "@angular/cdk": "7.3.7",
+        "@angular/common": "7.2.12",
+        "@angular/compiler": "7.2.12",
+        "@angular/core": "7.2.12",
         "@angular/flex-layout": "7.0.0-beta.24",
-        "@angular/forms": "7.2.10",
-        "@angular/material": "7.3.5",
-        "@angular/platform-browser": "7.2.10",
-        "@angular/platform-browser-dynamic": "7.2.10",
-        "@angular/platform-server": "7.2.10",
-        "@angular/router": "7.2.10",
-        "@angular/upgrade": "7.2.10",
+        "@angular/forms": "7.2.12",
+        "@angular/material": "7.3.7",
+        "@angular/platform-browser": "7.2.12",
+        "@angular/platform-browser-dynamic": "7.2.12",
+        "@angular/platform-server": "7.2.12",
+        "@angular/router": "7.2.12",
+        "@angular/upgrade": "7.2.12",
         "@clr/angular": "1.1.2",
         "@clr/icons": "1.1.2",
         "@clr/ui": "1.1.2",
@@ -46,17 +46,17 @@
         "@fortawesome/fontawesome-free-regular": "5.0.13",
         "@fortawesome/fontawesome-free-solid": "5.0.13",
         "@fortawesome/fontawesome-free-webfonts": "1.0.9",
-        "@ng-bootstrap/ng-bootstrap": "4.1.0",
-        "@ng-select/ng-select": "2.16.2",
+        "@ng-bootstrap/ng-bootstrap": "4.1.1",
+        "@ng-select/ng-select": "2.16.4",
         "@ngx-translate/core": "11.0.1",
-        "@webcomponents/custom-elements": "1.2.1",
-        "angular-calendar": "0.27.0",
+        "@webcomponents/custom-elements": "1.2.2",
+        "angular-calendar": "0.27.2",
         "angular-draggable-droppable": "4.2.0",
         "angular-resizable-element": "3.2.4",
         "angularx-flatpickr": "6.1.0",
         "bootstrap": "4.3.1",
         "calendar-utils": "0.3.0",
-        "core-js": "3.0.0",
+        "core-js": "3.0.1",
         "date-fns": "1.30.1",
         "es6-shim": "0.35.5",
         "flag-icon-css": "3.3.0",
@@ -67,7 +67,7 @@
         "moment": "2.24.0",
         "mutationobserver-shim": "0.3.3",
         "ng-busy": "7.0.0",
-        "ngx-bootstrap": "3.2.0",
+        "ngx-bootstrap": "4.0.0",
         "ngx-logger": "3.3.12",
         "primeng": "7.1.0",
         "reflect-metadata": "0.1.13",
@@ -76,16 +76,16 @@
         "zone.js": "0.9.0"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.13.6",
-        "@angular-devkit/core": "7.3.6",
-        "@angular/cli": "7.3.6",
-        "@angular/compiler-cli": "7.2.10",
-        "@angular/language-service": "7.2.10",
+        "@angular-devkit/build-angular": "0.13.8",
+        "@angular-devkit/core": "7.3.8",
+        "@angular/cli": "7.3.8",
+        "@angular/compiler-cli": "7.2.12",
+        "@angular/language-service": "7.2.12",
         "@compodoc/compodoc": "1.1.9",
         "@types/jasmine": "3.3.12",
-        "@types/node": "11.11.6",
-        "codelyzer": "5.0.0-beta.2",
-        "jasmine-core": "3.3.0",
+        "@types/node": "11.13.0",
+        "codelyzer": "5.0.0",
+        "jasmine-core": "3.4.0",
         "jasmine-spec-reporter": "4.2.1",
         "jshint-stylish": "2.2.1",
         "karma": "4.0.1",
@@ -106,9 +106,9 @@
         "stylelint-config-prettier": "5.0.0",
         "stylelint-config-standard": "18.2.0",
         "ts-node": "8.0.3",
-        "tslint": "5.14.0",
+        "tslint": "5.15.0",
         "tslint-config-prettier": "1.18.0",
         "typescript": "3.2.4",
-        "webpack-bundle-analyzer": "3.1.0"
+        "webpack-bundle-analyzer": "3.2.0"
     }
 }
