--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "7.2.14",
-        "@angular/cdk": "7.3.7",
-        "@angular/common": "7.2.14",
-        "@angular/compiler": "7.2.14",
-        "@angular/core": "7.2.14",
-        "@angular/flex-layout": "7.0.0-beta.24",
-        "@angular/forms": "7.2.14",
-        "@angular/material": "7.3.7",
-        "@angular/platform-browser": "7.2.14",
-        "@angular/platform-browser-dynamic": "7.2.14",
-        "@angular/platform-server": "7.2.14",
-        "@angular/router": "7.2.14",
-        "@angular/upgrade": "7.2.14",
+        "@angular/animations": "8.0.0-rc.5",
+        "@angular/cdk": "8.0.0-rc.2",
+        "@angular/common": "8.0.0-rc.5",
+        "@angular/compiler": "8.0.0-rc.5",
+        "@angular/core": "8.0.0-rc.5",
+        "@angular/flex-layout": "8.0.0-beta.26",
+        "@angular/forms": "8.0.0-rc.5",
+        "@angular/material": "8.0.0-rc.2",
+        "@angular/platform-browser": "8.0.0-rc.5",
+        "@angular/platform-browser-dynamic": "8.0.0-rc.5",
+        "@angular/platform-server": "8.0.0-rc.5",
+        "@angular/router": "8.0.0-rc.5",
+        "@angular/upgrade": "8.0.0-rc.5",
         "@clr/angular": "1.1.3",
         "@clr/icons": "1.1.3",
         "@clr/ui": "1.1.3",
@@ -46,17 +46,17 @@
         "@fortawesome/fontawesome-free-regular": "5.0.13",
         "@fortawesome/fontawesome-free-solid": "5.0.13",
         "@fortawesome/fontawesome-free-webfonts": "1.0.9",
-        "@ng-bootstrap/ng-bootstrap": "4.1.2",
-        "@ng-select/ng-select": "2.18.0",
+        "@ng-bootstrap/ng-bootstrap": "4.1.3",
+        "@ng-select/ng-select": "2.20.0",
         "@ngx-translate/core": "11.0.1",
         "@webcomponents/custom-elements": "1.2.4",
-        "angular-calendar": "0.27.7",
+        "angular-calendar": "0.27.8",
         "angular-draggable-droppable": "4.3.0",
         "angular-resizable-element": "3.2.4",
         "angularx-flatpickr": "6.1.0",
         "bootstrap": "4.3.1",
         "calendar-utils": "0.3.1",
-        "core-js": "3.0.1",
+        "core-js": "3.1.3",
         "date-fns": "1.30.1",
         "es6-shim": "0.35.5",
         "flag-icon-css": "3.3.0",
@@ -67,23 +67,23 @@
         "moment": "2.24.0",
         "mutationobserver-shim": "0.3.3",
         "ng-busy": "7.0.0",
-        "ngx-bootstrap": "4.1.1",
-        "ngx-logger": "3.3.12",
-        "primeng": "7.1.2",
+        "ngx-bootstrap": "4.2.0",
+        "ngx-logger": "3.3.13",
+        "primeng": "7.1.3",
         "reflect-metadata": "0.1.13",
         "rrule": "2.6.0",
-        "rxjs": "6.5.1",
-        "zone.js": "0.9.0"
+        "rxjs": "6.5.2",
+        "zone.js": "0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.13.8",
-        "@angular-devkit/core": "7.3.8",
-        "@angular/cli": "7.3.8",
-        "@angular/compiler-cli": "7.2.14",
-        "@angular/language-service": "7.2.14",
+        "@angular-devkit/build-angular": "0.800.0",
+        "@angular-devkit/core": "8.0.0",
+        "@angular/cli": "8.0.0",
+        "@angular/compiler-cli": "8.0.0-rc.5",
+        "@angular/language-service": "8.0.0-rc.5",
         "@compodoc/compodoc": "1.1.9",
-        "@types/jasmine": "3.3.12",
-        "@types/node": "11.13.8",
+        "@types/jasmine": "3.3.13",
+        "@types/node": "12.0.3",
         "codelyzer": "5.0.1",
         "jasmine-core": "3.4.0",
         "jasmine-spec-reporter": "4.2.1",
@@ -100,15 +100,15 @@
         "karma-remap-istanbul": "0.6.0",
         "modernizr": "3.7.1",
         "node-sass": "4.12.0",
-        "prettier": "1.17.0",
+        "prettier": "1.17.1",
         "protractor": "6.0.0",
         "stylelint": "10.0.1",
-        "stylelint-config-prettier": "5.1.0",
+        "stylelint-config-prettier": "5.2.0",
         "stylelint-config-standard": "18.3.0",
-        "ts-node": "8.1.0",
+        "ts-node": "8.2.0",
         "tslint": "5.16.0",
         "tslint-config-prettier": "1.18.0",
-        "typescript": "3.2.4",
+        "typescript": "3.4.5",
         "webpack-bundle-analyzer": "3.3.2"
     }
 }
