--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "8.0.0-rc.5",
-        "@angular/cdk": "8.0.0-rc.2",
-        "@angular/common": "8.0.0-rc.5",
-        "@angular/compiler": "8.0.0-rc.5",
-        "@angular/core": "8.0.0-rc.5",
+        "@angular/animations": "8.0.0",
+        "@angular/cdk": "8.0.0",
+        "@angular/common": "8.0.0",
+        "@angular/compiler": "8.0.0",
+        "@angular/core": "8.0.0",
         "@angular/flex-layout": "8.0.0-beta.26",
-        "@angular/forms": "8.0.0-rc.5",
-        "@angular/material": "8.0.0-rc.2",
-        "@angular/platform-browser": "8.0.0-rc.5",
-        "@angular/platform-browser-dynamic": "8.0.0-rc.5",
-        "@angular/platform-server": "8.0.0-rc.5",
-        "@angular/router": "8.0.0-rc.5",
-        "@angular/upgrade": "8.0.0-rc.5",
+        "@angular/forms": "8.0.0",
+        "@angular/material": "8.0.0",
+        "@angular/platform-browser": "8.0.0",
+        "@angular/platform-browser-dynamic": "8.0.0",
+        "@angular/platform-server": "8.0.0",
+        "@angular/router": "8.0.0",
+        "@angular/upgrade": "8.0.0",
         "@clr/angular": "1.1.3",
         "@clr/icons": "1.1.3",
         "@clr/ui": "1.1.3",
@@ -79,8 +79,8 @@
         "@angular-devkit/build-angular": "0.800.0",
         "@angular-devkit/core": "8.0.0",
         "@angular/cli": "8.0.0",
-        "@angular/compiler-cli": "8.0.0-rc.5",
-        "@angular/language-service": "8.0.0-rc.5",
+        "@angular/compiler-cli": "8.0.0",
+        "@angular/language-service": "8.0.0",
         "@compodoc/compodoc": "1.1.9",
         "@types/jasmine": "3.3.13",
         "@types/node": "12.0.3",
